# nebgov

./: CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
app/: package.json  tailwind.config.ts  (+1 more)
contracts/governor/: Cargo.toml
contracts/governor/src/: events.rs  lib.rs
contracts/governor/src/tests/: integration.rs  mod.rs  transitions.rs
contracts/governor/test_snapshots/test/: test_cancel_guardian_active.1.json  test_cancel_guardian_pending_unauthorized.1.json  test_cancel_proposer_active_unauthorized.1.json  test_cancel_proposer_pending.1.json  test_cannot_vote_twice.1.json  test_cast_vote_with_reason_emits_event.1.json  test_cast_vote_with_reason_multiple_voters.1.json  test_cast_vote_with_reason_stores_reason.1.json  test_dynamic_quorum_with_oracle.1.json  test_get_receipt_returns_voting_details.1.json  test_is_quorum_reached.1.json  test_multi_token_weighted_voting.1.json  test_proposal_expiry.1.json  test_propose_rejects_empty_targets.1.json  test_propose_rejects_mismatched_lengths.1.json  test_propose_with_multiple_targets.1.json  test_queue_expired_proposal_fails.1.json  test_quorum_and_state.1.json  test_vote_type_quadratic_weighting.1.json  test_vote_type_simple_rejects_abstain.1.json
contracts/governor/test_snapshots/tests/: update_config_succeeds_with_contract_self_auth.1.json  upgrade_rejects_admin_acting_as_direct_caller.1.json  upgrade_succeeds_when_authorized_by_contract_itself.1.json
contracts/governor/test_snapshots/tests/integration/: test_full_proposal_lifecycle.1.json
(+97 files in other folders)
