[package]
name = "sorogov-governor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sorogov-timelock = { path = "../timelock", features = ["testutils"] }
sorogov-token-votes = { path = "../token-votes", features = ["testutils"] }
